force-app/main/default/objects/Delivery__c/fields/DemoTextField__c.field-meta.xml
<CustomField>
    <fullName>DemoTextField__c</fullName>
    <label>DemoTextField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>