force-app/main/default/objects/Delivery__c/fields/MetechoField__c.field-meta.xml
<CustomField>
    <fullName>MetechoField__c</fullName>
    <label>MetechoField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>